<resources>
    <string name="app_name">DataStoreExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="welcome_to_home">Welcome to Home</string>
    <string name="name">Name</string>
    <string name="change_email">Change Email</string>
    <string name="this_is_yor_registered_email">This is yor registered email</string>
    <string name="str_change_email">Change Email</string>
    <string name="clear_data">Clear Data</string>
</resources>